fix screen cut off issue

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
 }
 
 body {
-    background: linear-gradient(180deg, #658AAE 0%, #8BC2B9 100%);
+    background: linear-gradient(180deg, #658aae 0%, #8bc2b9 100%);
     background-repeat: no-repeat;
     background-attachment: fixed;
     margin: 0px;
@@ -149,7 +149,7 @@ est-register-btn {
 
 .about-container {
     width: calc(200vw);
-    height: calc(100vh - 180px);
+    /* height: calc(100vh - 180px); */
     padding-top: 120px;
     display: flex;
 }
@@ -190,7 +190,7 @@ img {
     padding-right: 15%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    width: 33%;
 }
 
 .about-col-2__row-1__item:last-child {
@@ -372,6 +372,12 @@ est-footer {
 @media (min-width: 901px) {
 }
 
+@media (min-height: 701px) {
+}
+
+@media (max-height: 700px) {
+    }
+
 @media (max-width: 900px) {
     .splash__illo {
         height: 600px;
@@ -399,6 +405,7 @@ est-footer {
 
     .about-col-2__row-1__item {
         padding: 30px 0px;
+        width: 100%;
     }
 
     .about-col-2__row-1__item:last-child {
@@ -471,7 +478,6 @@ est-footer {
     .game-cube {
         height: 350px;
         width: auto;
-
     }
 
     .new-experience {
